# Chroma

./: .gitignore  CMakeLists.txt
include/: app.hpp  color.hpp  cursor.hpp
include/canvas/: canvas.hpp
include/canvas/command/: brush_command.hpp  color_command.hpp  command.hpp
include/lua/: api.hpp  color.hpp  imgui.hpp
include/lua/imgui/: enums.hpp  vec2.hpp
include/menu/: exititem.hpp  fileformat.hpp  flipitem.hpp  menuitem.hpp  newitem.hpp  openitem.hpp  saveitem.hpp  undoredoitem.hpp
include/system/: signal.hpp
include/window/: color_picker.hpp  palette.hpp  viewport.hpp  window.hpp
src/: app.cpp  cursor.cpp  main.cpp
src/canvas/: canvas.cpp
src/canvas/command/: brush_command.cpp
src/lua/: api.cpp  color.cpp  imgui.cpp
src/lua/imgui/: enums.cpp  vec2.cpp
src/menu/: exititem.cpp  fileformat.cpp  flipitem.cpp  newitem.cpp  openitem.cpp  saveitem.cpp  undoredoitem.cpp
src/window/: color_picker.cpp  palette.cpp  viewport.cpp  window.cpp
